# tcode

./: .gitignore  CLAUDE.md  COHORT-DESIGN.md  Cargo.toml  README.md  app-crate-app-tui-core-core-tui-cozy-hollerith.md  install.ps1  install.sh  plan.md  plan_mode_improve_plan.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.tcode/: config.toml
crates/tcode-app/: AGENTS.md  Cargo.toml  DESIGN.md  PRODUCT.md  tauri.conf.json
crates/tcode-app/capabilities/: default.json
crates/tcode-app/src/: boot.rs  bridge.rs  commands.rs  lib.rs  main.rs  projects.rs  state.rs
crates/tcode-app/tests/: bridge.rs
crates/tcode-app/ui/: index.html  package-lock.json  package.json  preview.html  vite.config.ts
crates/tcode-app/ui/src/: App.tsx  ApprovalDialog.tsx  Composer.tsx  FilePanel.tsx  Launchpad.tsx  Transcript.tsx  Workspace.tsx  app.css  files.ts  main.tsx  rich.tsx  styles.css  time.ts  transcript.ts  types.ts
crates/tcode-app/ui/src/components/: Diff.tsx  Icons.tsx  Mark.tsx  Path.tsx  Status.tsx
crates/tcode-app/ui/src/preview/: Preview.tsx  main.tsx  mock-core.ts  mock-dialog.ts  mock-event.ts  preview.css
crates/tcode-app/ui/src/theme/: base.css  porcelain.css
crates/tcode-core/: AGENTS.md  Cargo.toml
crates/tcode-core/prompts/agent/: compact.md  dogfood.md  plan-mode-enter.md
crates/tcode-core/prompts/auto_mode/: fast.md  folder-trust.md  policy.md  reasoned.md
crates/tcode-core/prompts/memory/: system.md
crates/tcode-core/src/: accumulate.rs  agent.rs  agent_roles.rs  background.rs  blobs.rs  checkpoint.rs  codex.rs  config.rs  cwd_scope.rs  default.toml  environment.rs  export.rs  external.rs  freshness.rs  home.rs  hooks.rs  images.rs  import.rs  ledger.rs  lib.rs  memory.rs  permission.rs  provider.rs  references.rs  store.rs  stream_util.rs  task_trace.rs  template.rs  tool.rs  types.rs
crates/tcode-core/src/agent/: compact.rs  mod.rs  session.rs  suggest.rs  summarize.rs
crates/tcode-core/src/auto_mode/: mod.rs  provider_classifier.rs
crates/tcode-core/src/commands/: cd.rs  clear.rs  compact.rs  cost.rs  dogfood.rs  exit.rs  export.rs  memory.rs  mod.rs  mode.rs  note.rs  plan.rs  resume.rs  suggestions.rs
crates/tcode-core/tests/: layered.rs
crates/tcode-frontend/: AGENTS.md  Cargo.toml
crates/tcode-frontend/prompts/: interactive-agent-system.md
crates/tcode-frontend/src/: agent.rs  boot.rs  build.rs  lib.rs  menu.rs  session.rs  setup.rs
crates/tcode-importers/: Cargo.toml
crates/tcode-importers/src/: lib.rs
crates/tcode-providers/: AGENTS.md  Cargo.toml
crates/tcode-providers/src/: anthropic.rs  chatgpt.rs  codex.rs  codex_cli.rs  codex_login.rs  http.rs  idle.rs  lib.rs  openai.rs  retry.rs
crates/tcode-providers/tests/: wire.rs
crates/tcode-tools/: AGENTS.md  Cargo.toml  build.rs
crates/tcode-tools/prompts/: cohort-finalize.md  cohort-member.md  task-explore-system.md  task-general-system.md  view-image-system.md  web-fetch-summary.md
crates/tcode-tools/src/: agent_defs.rs  frontmatter.rs  fs_tools.rs  grounding.rs  interaction.rs  lib.rs  mcp.rs  monitor.rs  output.rs  plan.rs  redact.rs  search.rs  shell.rs  skills.rs  task.rs  view_image.rs  view_image_tests.rs  web.rs
crates/tcode-tools/src/agent/: cohort.rs  defs.rs  mod.rs
crates/tcode-tools/src/agent/builtin/: explore.md  general.md  orchestrator.md  plan.md
crates/tcode-tools/src/fs/: append.rs  edit.rs  mod.rs  read.rs  tests.rs  write.rs
crates/tcode-tools/src/shell_filter/: cargo_test.rs  mod.rs  toml_def.rs
crates/tcode-tools/src/shell_filter/builtin/: cargo-build.toml  git-status.toml  git-transfer.toml  go-test.toml  npm-install.toml  pip-install.toml  pytest.toml
crates/tcode-tools/src/skills/: mod.rs
crates/tcode-tools/src/skills/builtin/tcode-config/: SKILL.md
crates/tcode-tools/src/view_image/: mod.rs  tests.rs
crates/tcode-tools/tests/: agent_loop.rs  cohort.rs  mcp_stdio.rs  web_live.rs
crates/tcode-tui/: AGENTS.md  Cargo.toml
crates/tcode-tui/src/: app.rs  approval.rs  composer.rs  diff.rs  editor.rs  folder_trust_picker.rs  lib.rs  live_panel.rs  markdown.rs  mathfmt.rs  mode_picker.rs  model_picker.rs  overlay.rs  provider_picker.rs  reference_style.rs  render.rs  resume.rs  rewind.rs  setup.rs  surface.rs  theme.rs  transcript.rs  usage.rs  view.rs  view_picker.rs  voice_picker.rs  wizard.rs
crates/tcode-tui/src/app/: bake.rs  cohort.rs  commands.rs  draw.rs  harness.rs  input.rs  mod.rs  replay.rs  rewind.rs  turn.rs  views.rs
crates/tcode-tui/src/voice/: mod.rs  sidecar.rs
crates/tcode-voiced/: Cargo.toml
crates/tcode-voiced/src/: asr.rs  bpe.rs  capture.rs  main.rs  model.rs  protocol.rs
docs/: token-efficiency-vs-pi.md
prompts/: auto-classifier-fast.md  auto-classifier-policy.md  dogfood.md  interactive-agent-system.md  memory-system.md  plan-mode-enter.md  plan-mode-exit.md  suggest-system.md  task-explore-system.md  task-general-system.md  task-plan-system.md  view-image-system.md  web-fetch-summary.md
prompts/skills/init/: SKILL.md
src/: approver.rs  main.rs  printer.rs  update.rs
src/prompts/: interactive-agent-system.md
