[package]
name = "tcode"
version = "0.1.0"
edition = "2021"

[dependencies]
tcode-core = { path = "crates/tcode-core" }
tcode-providers = { path = "crates/tcode-providers" }
tcode-tools = { path = "crates/tcode-tools" }
tcode-tui = { path = "crates/tcode-tui" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[workspace]
members = [
    "crates/tcode-core",
    "crates/tcode-providers",
    "crates/tcode-tools",
    "crates/tcode-tui",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
toml = "0.8"
toml_edit = "0.22"
dirs = "5"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls",
    "http2",
    "charset",
    # Honor the OS-level proxy (e.g. Windows system proxy), not just env vars.
    "system-proxy",
] }
eventsource-stream = "0.2"
uuid = { version = "1", features = ["v4", "v5"] }
tracing = "0.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
