[package]
name = "tcode-core"
version = "0.1.9"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
base64 = "0.22"
toml = { workspace = true }
toml_edit = { workspace = true }
dirs = { workspace = true }
ignore = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
