[package]
name = "tcode-providers"
version = "0.1.9"
edition = "2021"

[dependencies]
tcode-core = { path = "../tcode-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
