[package]
name = "tcode-tools"
version = "0.1.8"
edition = "2021"

[dependencies]
tcode-core = { path = "../tcode-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
dom_smoothie = "0.18"
ignore = "0.4"
globset = "0.4"
base64 = "0.22"
htmd = "0.5.4"
scraper = "0.27.0"
reqwest = { workspace = true }
futures = { workspace = true }
os_info = { version = "3", default-features = false }

[dev-dependencies]
tempfile = "3"
