[package]
name = "tcode-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
tcode-core = { path = "../tcode-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
pulldown-cmark = { version = "0.12", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
similar = { version = "2", features = ["inline"] }
arboard = "3"
image = { workspace = true }
base64 = "0.22"
unicode-width = "0.2"

[dev-dependencies]
# Test-only: render.rs asserts registry behaviour against the real builtin
# tool set (quiet-output ↔ BatchPolicy alignment). No production dependency.
tcode-tools = { path = "../tcode-tools" }
