[package]
name = "tcode-tui"
version.workspace = true
edition = "2021"

[dependencies]
tcode-core = { path = "../tcode-core" }
# `skill` (in tcode-tools) is the one tool whose `/name` shorthand the TUI
# resolves itself (see app.rs `run_slash`'s skill fallback), so this needs to
# be a real dependency, not the test-only one it used to be.
tcode-importers = { path = "../tcode-importers" }
tcode-providers = { path = "../tcode-providers" }
tcode-tools = { path = "../tcode-tools" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28", features = ["event-stream"] }
pulldown-cmark = { version = "0.12", default-features = false }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
similar = { version = "2", features = ["inline"] }
arboard = "3"
image = { workspace = true }
base64 = "0.22"
unicode-width = "0.2"
url = "2"
